tests/ui/error-codes/E0606.stderr
error[E0606]: casting `&u8` as `u8` is invalid
  --> $DIR/E0606.rs:2:5
   |
LL |     &0u8 as u8;
   |     ^^^^^^^^^^
   |
help: dereference the expression
   |
LL |     *&0u8 as u8;
   |     +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0606`.
